--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "whatwg-fetch": "2.0.4"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.3",
-    "eslint": "4.19.1",
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
     "eslint-plugin-import": "2.11.0",
     "eslint-plugin-react": "7.7.0",
     "jest": "22.4.3",
