--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "koa-webpack": "3.0.2",
     "prettier": "1.12.1",
     "prettier-eslint": "8.8.1",
-    "webpack-cli": "2.1.2"
+    "webpack-cli": "2.1.2",
+    "@babel/traverse": "7.0.0-beta.52"
   },
   "eslintConfig": {
     "env": {
