--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "start": "node ./serve",
     "static": "node ./serve-static",
     "lint": "eslint src --fix",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    
+    "test:acceptance:setup": "selenium-standalone install --version=3.8.1 --baseURL=https://selenium-release.storage.googleapis.com --drivers.chrome.version=2.34",
+    "test:acceptance:run": "nightwatch --env chrome",
+
+    "test:acceptance": "run-s test:acceptance:setup test:acceptance:run"
+
+    
+    
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
@@ -46,14 +54,19 @@
     "mobx-sync": "^1.0.0",
     "mobx-utils": "4.0.1",
     "mysql": "^2.16.0",
+    "node-gyp": "^3.8.0",
+    "radium": "^0.25.0",
     "raw-loader": "0.5.1",
     "react": "16.3.2",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "16.3.2",
     "react-final-form": "3.3.1",
     "react-hot-loader": "4.1.0",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
+    "react-transition-group": "^2.5.0",
     "semantic-ui-less": "2.3.1",
     "semantic-ui-react": "0.79.1",
     "style-loader": "0.21.0",
@@ -63,16 +76,19 @@
     "whatwg-fetch": "2.0.4"
   },
   "devDependencies": {
+    "@babel/traverse": "7.0.0-beta.52",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-plugin-import": "2.11.0",
     "eslint-plugin-react": "7.7.0",
     "jest": "22.4.3",
     "koa-webpack": "3.0.2",
+    "nightwatch": "^0.9.21",
+    "npm-run-all": "^4.1.3",
     "prettier": "1.12.1",
     "prettier-eslint": "8.8.1",
-    "webpack-cli": "2.1.2",
-    "@babel/traverse": "7.0.0-beta.52"
+    "selenium-standalone": "^6.15.3",
+    "webpack-cli": "2.1.2"
   },
   "eslintConfig": {
     "env": {
