--- a/package.json
+++ b/package.json
@@ -8,14 +8,9 @@
     "static": "node ./serve-static",
     "lint": "eslint src --fix",
     "test:watch": "jest --watch",
-    
-    "test:acceptance:setup": "selenium-standalone install --version=3.8.1 --baseURL=https://selenium-release.storage.googleapis.com --drivers.chrome.version=2.34",
+    "test:acceptance:setup": "selenium-standalone install",
     "test:acceptance:run": "nightwatch --env chrome",
-
     "test:acceptance": "run-s test:acceptance:setup test:acceptance:run"
-
-    
-    
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
@@ -83,6 +78,7 @@
     "eslint-plugin-react": "7.7.0",
     "jest": "22.4.3",
     "koa-webpack": "3.0.2",
+    "mocha": "^5.2.0",
     "nightwatch": "^0.9.21",
     "npm-run-all": "^4.1.3",
     "prettier": "1.12.1",
