--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "static": "node ./serve-static",
     "lint": "eslint src --fix",
     "test:watch": "jest --watch",
+    "test" : "jasmine",
     "test:acceptance:setup": "selenium-standalone install",
     "test:acceptance:run": "nightwatch --env chrome",
     "test:acceptance": "run-s test:acceptance:setup test:acceptance:run"
@@ -72,18 +73,29 @@
   },
   "devDependencies": {
     "@babel/traverse": "7.0.0-beta.52",
+    "babel": "^6.23.0",
     "babel-eslint": "^8.2.3",
+    "babel-preset-react-app": "^5.0.4",
+    "chai": "^4.2.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "eslint": "^4.19.1",
     "eslint-plugin-import": "2.11.0",
     "eslint-plugin-react": "7.7.0",
+    "ignore-styles": "^5.0.1",
+    "jasmine": "^3.2.0",
+    "jasmine-enzyme": "^7.0.0",
     "jest": "22.4.3",
+    "jsdom": "^12.2.0",
     "koa-webpack": "3.0.2",
     "mocha": "^5.2.0",
     "nightwatch": "^0.9.21",
     "npm-run-all": "^4.1.3",
     "prettier": "1.12.1",
     "prettier-eslint": "8.8.1",
+    "react-addons-test-utils": "^15.6.2",
     "selenium-standalone": "^6.15.3",
+    "sinon": "^7.0.0",
     "webpack-cli": "2.1.2"
   },
   "eslintConfig": {
@@ -126,5 +138,10 @@
   "prettier": {
     "singleQuote": true,
     "arrowParens": "always"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   }
 }
